--- a/shop_vue/package.json
+++ b/shop_vue/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
     "bulma": "^0.9.3",
+    "bulma-toast": "^2.3.1",
     "core-js": "^3.6.5",
     "vue": "^3.1.4",
     "vue-router": "^4.0.0-0",
